--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,12 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.2",
+    "httpx>=0.27.2",
+    "pillow>=10.4.0",
+    "sentencepiece>=0.2.0",
+    "torch>=2.2.0",
+    "torchvision>=0.17.0",
+    "transformers>=4.41.0",
+    "ultralytics>=8.3.0",
     "uvicorn>=0.38.0",
 ]
