enhance: update GPU settings and add troubleshooting guidelines

--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -13,6 +13,9 @@ services:
       UVICORN_WORKERS: "1"
       NVIDIA_VISIBLE_DEVICES: "all"
       NVIDIA_DRIVER_CAPABILITIES: "compute,utility"
+      TORCH_USE_CUDA_DSA: "${TORCH_USE_CUDA_DSA:-0}"
+      CUDA_LAUNCH_BLOCKING: "${CUDA_LAUNCH_BLOCKING:-0}"
+      PYTORCH_CUDA_ALLOC_CONF: "${PYTORCH_CUDA_ALLOC_CONF:-expandable_segments:True}"
     volumes:
       - models-cache:/models
     deploy:
