--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ dependencies = [
     "httpx>=0.27.2",
     "pillow>=10.4.0",
     "sentencepiece>=0.2.0",
-    "torch>=2.2.0",
-    "torchvision>=0.17.0",
+    "torch==2.3.1",
+    "torchvision==0.18.1",
     "transformers>=4.41.0",
     "ultralytics>=8.3.0",
     "uvicorn>=0.38.0",
