--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -2,13 +2,13 @@ version: "3.9"
 
 services:
   inference-api:
-    container_name: model-inference-api
+    container_name: model-inference-api-gpu
     build:
       context: .
       dockerfile: Dockerfile
     image: model-inference-engine:latest
     ports:
-      - "5000:5000"
+      - "5001:5000"
     environment:
       UVICORN_WORKERS: "1"
       NVIDIA_VISIBLE_DEVICES: "all"
