--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  inference-api:
+  inference-api-gpu:
     container_name: model-inference-api-gpu
     build:
       context: .
