--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.2",
+    "google-genai>=1.0.0",
     "httpx>=0.27.2",
     "matplotlib>=3.7.0",
     "pillow>=10.4.0",
+    "pydantic>=2.0.0",
+    "python-dotenv>=1.0.0",
     "requests>=2.31.0",
     "sentencepiece>=0.2.0",
     "torch==2.3.1",
