--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 # Gemini API Configuration
 # Get your API key from: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
+
+# Database Configuration
+# Path to SQLite database file for storing inference logs
+# Default: ./storage/inference.db
+INFERENCE_DB_PATH=./storage/inference.db
