--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.20.0",
     "fastapi>=0.121.2",
     "google-genai>=1.0.0",
     "httpx>=0.27.2",
